--- a/drivers/memory/Kconfig
+++ b/drivers/memory/Kconfig
@@ -61,7 +61,7 @@ config TEGRA124_MC
 config TEGRA124_EMC
 	bool "Tegra124 External Memory Controller(EMC) driver"
 	default y
-	depends on TEGRA124_MC
+	depends on TEGRA124_MC && MFD_SYSCON
 	help
 	  This driver is for the External Memory Controller(EMC) module
 	  available in Tegra124 SoCs.
