--- a/arch/arm/boot/dts/tegra124.dtsi
+++ b/arch/arm/boot/dts/tegra124.dtsi
@@ -113,7 +113,8 @@
 	pinmux: pinmux@70000868 {
 		compatible = "nvidia,tegra124-pinmux";
 		reg = <0x70000868 0x164>,	/* Pad control registers */
-		      <0x70003000 0x434>;	/* Mux registers */
+		      <0x70003000 0x434>,	/* Mux registers */
+		      <0x70000820 0x8>;		/* MIPI pad control */
 	};
 
 	/*
