CHROMIUM: config: Update config to enable EMC
Update the splitconfigs to enable EMC scaling on Tegra132

BUG=chrome-os-partner:30851
TEST=verified emc driver loads correctly

Change-Id: I0911daf5dc005f5884e70e9361ec9d20ac000ae5
Signed-off-by: Rhyland Klein <rklein@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/216807
Reviewed-by: Olof Johansson <olofj@chromium.org>

--- a/chromeos/config/arm64/common.config
+++ b/chromeos/config/arm64/common.config
@@ -67,6 +67,7 @@ CONFIG_64BIT=y
 # CONFIG_ADJD_S311 is not set
 # CONFIG_ADT7316 is not set
 # CONFIG_ADXRS450 is not set
+# CONFIG_AHCI_IMX is not set
 # CONFIG_AK8975 is not set
 # CONFIG_AMBA_PL08X is not set
 # CONFIG_APDS9300 is not set
@@ -106,6 +107,7 @@ CONFIG_ARM_GIC=y
 # CONFIG_ARM_KIRKWOOD_CPUFREQ is not set
 # CONFIG_ARM_SMMU is not set
 # CONFIG_ARM_SP805_WATCHDOG is not set
+CONFIG_ARM_TEGRA124_CPUFREQ=y
 CONFIG_ARM_TEGRA20_CPUFREQ=y
 # CONFIG_ASYNC_TX_DMA is not set
 CONFIG_ATA=y
@@ -265,8 +267,8 @@ CONFIG_FRAME_WARN=2048
 # CONFIG_FUNCTION_TRACER is not set
 # CONFIG_GENERIC_ADC_BATTERY is not set
 CONFIG_GENERIC_ALLOCATOR=y
-# CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 # CONFIG_GENERIC_CPUFREQ_KRAIT is not set
+CONFIG_GENERIC_CPUFREQ_CPU0=y
 CONFIG_GENERIC_CSUM=y
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_GENERIC_IOMAP=y
@@ -403,7 +405,7 @@ CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_USB_SUPPORT=y
-# CONFIG_MEMORY is not set
+CONFIG_MEMORY=y
 CONFIG_MEMORY_ISOLATION=y
 # CONFIG_MEN_A21_WDT is not set
 # CONFIG_MFD_AAT2870_CORE is not set
@@ -417,7 +419,7 @@ CONFIG_MFD_CROS_EC_I2C=y
 # CONFIG_MFD_NVEC is not set
 CONFIG_MFD_PALMAS=y
 # CONFIG_MFD_RK808 is not set
-# CONFIG_MFD_SYSCON is not set
+CONFIG_MFD_SYSCON=y
 CONFIG_MFD_TPS65090=y
 CONFIG_MFD_TPS6586X=y
 # CONFIG_MFD_TPS65910 is not set
@@ -532,10 +534,12 @@ CONFIG_RCU_CPU_STALL_TIMEOUT=60
 CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=y
 CONFIG_REGMAP_IRQ=y
+CONFIG_REGMAP_MMIO=y
 CONFIG_REGMAP_SPI=y
 CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_ACT8865 is not set
 # CONFIG_REGULATOR_AD5398 is not set
+# CONFIG_REGULATOR_ANATOP is not set
 CONFIG_REGULATOR_AS3722=y
 # CONFIG_REGULATOR_CROS_EC_TPS65090 is not set
 # CONFIG_REGULATOR_DA9210 is not set
@@ -665,14 +669,17 @@ CONFIG_SYS_SUPPORTS_HUGETLBFS=y
 # CONFIG_TCG_ST33_I2C is not set
 CONFIG_TCG_TIS_I2C_INFINEON=y
 # CONFIG_TCS3472 is not set
+CONFIG_TEGRA124_EMC=y
+CONFIG_TEGRA124_MC=y
 CONFIG_TEGRA132_SOCTHERM=y
 CONFIG_TEGRA20_APB_DMA=y
 CONFIG_TEGRA_AHB=y
-# CONFIG_TEGRA_DVFS is not set
+CONFIG_TEGRA_DVFS=y
 CONFIG_TEGRA_HOST1X=y
 CONFIG_TEGRA_HOST1X_FIREWALL=y
 # CONFIG_TEGRA_IOMMU_SMMU is not set
 CONFIG_TEGRA_SOCTHERM=y
+# CONFIG_TEGRA_XUSB_PHY is not set
 # CONFIG_THERMAL_GOV_PID is not set
 # CONFIG_THERMAL_GOV_USER_SPACE is not set
 CONFIG_THERMAL_OF=y
