--- a/arch/arm64/boot/dts/tegra132-ryu-pinmux.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu-pinmux.dtsi
@@ -1171,7 +1171,7 @@
 			pg4 {
 				nvidia,pins = "pg4";
 				nvidia,function = "rsvd1";
-				nvidia,pull = <TEGRA_PIN_PULL_DOWN>;
+				nvidia,pull = <TEGRA_PIN_PULL_NONE>;
 				nvidia,tristate = <TEGRA_PIN_ENABLE>;
 				nvidia,enable-input = <TEGRA_PIN_DISABLE>;
 			};
