--- a/chromeos/config/arm64/common.config
+++ b/chromeos/config/arm64/common.config
@@ -302,6 +302,7 @@ CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_HARDLOCKUP_DETECTOR_OTHER_CPU=y
 # CONFIG_HAVE_AOUT is not set
 CONFIG_HAVE_ARCH_PFN_VALID=y
+CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_CLK_PREPARE=y
@@ -590,6 +591,8 @@ CONFIG_SATA_PMP=y
 # CONFIG_SCSI_CONSTANTS is not set
 # CONFIG_SCSI_LOWLEVEL_PCMCIA is not set
 # CONFIG_SDIO_UART is not set
+CONFIG_SECCOMP=y
+CONFIG_SECCOMP_FILTER=y
 CONFIG_SELECT_MEMORY_MODEL=y
 # CONFIG_SENSORS_GPIO_FAN is not set
 # CONFIG_SENSORS_HMC5843 is not set
