--- a/chromeos/config/base.config
+++ b/chromeos/config/base.config
@@ -278,6 +278,7 @@ CONFIG_CRYPTO_WORKQUEUE=y
 CONFIG_DEBUG_CREDENTIALS=y
 CONFIG_DEBUG_DEVRES=y
 # CONFIG_DEBUG_DRIVER is not set
+CONFIG_TEST_ASYNC_DRIVER_PROBE=m
 # CONFIG_DEBUG_FORCE_WEAK_PER_CPU is not set
 CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_INFO=y
