watchdog: qcom: enable configs for KPSS WDT
Enable configurations for the watchdog timer block found in the Krait Processor
Subsystem (KPSS).

Change-Id: Ic5e01ba2249f4e7e370aabaceb65649064d22689
Signed-off-by: Abhishek Airan <aairan@codeaurora.org>
Reviewed-on: https://chromium-review.googlesource.com/219470
Reviewed-by: Grant Grundler <grundler@chromium.org>
Commit-Queue: Grant Grundler <grundler@chromium.org>
Tested-by: Grant Grundler <grundler@chromium.org>

--- a/arch/arm/configs/chromiumos-ipq806x.config
+++ b/arch/arm/configs/chromiumos-ipq806x.config
@@ -3552,3 +3552,5 @@ CONFIG_AVERAGE=y
 # CONFIG_CORDIC is not set
 # CONFIG_DDR is not set
 # CONFIG_VIRTUALIZATION is not set
+CONFIG_QCOM_WDT=y
+CONFIG_WATCHDOG=y
