CHROMIUM: config: rockchip: Enable mali with platform rk
This amounts to:
 echo 'CONFIG_MALI_MIDGARD=y'>> \
   chromeos/config/armel/chromiumos-rockchip.flavour.config
 echo 'CONFIG_MALI_EXPERT=y'>> \
   chromeos/config/armel/chromiumos-rockchip.flavour.config
 echo 'CONFIG_MALI_PLATFORM_FAKE=y'>> \
   chromeos/config/armel/chromiumos-rockchip.flavour.config
 echo 'CONFIG_MALI_PLATFORM_THIRDPARTY=y'>> \
   chromeos/config/armel/chromiumos-rockchip.flavour.config
 echo 'CONFIG_MALI_PLATFORM_THIRDPARTY_NAME="rk"'>> \
   chromeos/config/armel/chromiumos-rockchip.flavour.config

 ./chromeos/scripts/kernelconfig oldconfig

BUG=chrome-os-partner:31652
TEST=emerge-veyron_pinky chromeos-kernel-3_14
TEST=on device verify mali driver probes in /var/log/messages

Signed-off-by: Simon Xue <xxm@rock-chips.com>
Signed-off-by: Daniel Kurtz <djkurtz@chromium.org>
Change-Id: Ie393844bf16698fcdeffb5b81424ef9b1c1db603
Reviewed-on: https://chromium-review.googlesource.com/214639
Reviewed-by: Doug Anderson <dianders@chromium.org>

--- a/chromeos/config/arm64/common.config
+++ b/chromeos/config/arm64/common.config
@@ -383,6 +383,7 @@ CONFIG_KEYBOARD_TEGRA=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
 # CONFIG_MAG3110 is not set
+# CONFIG_MALI_MIDGARD is not set
 # CONFIG_MAX1363 is not set
 # CONFIG_MAX517 is not set
 # CONFIG_MCP320X is not set
