--- a/chromeos/config/armel/chromiumos-arm.flavour.config
+++ b/chromeos/config/armel/chromiumos-arm.flavour.config
@@ -92,6 +92,7 @@ CONFIG_IOMMU_API=y
 CONFIG_KEYBOARD_GPIO_POLLED=y
 CONFIG_KEYBOARD_NVEC=y
 CONFIG_KEYBOARD_TEGRA=y
+# CONFIG_MALI_MIDGARD is not set
 CONFIG_MEDIA_SUPPORT=m
 CONFIG_MFD_AS3722=y
 CONFIG_MFD_CROS_EC_I2C=y
