--- a/chromeos/config/armel/chromiumos-rockchip.flavour.config
+++ b/chromeos/config/armel/chromiumos-rockchip.flavour.config
@@ -68,6 +68,21 @@ CONFIG_I2C_ALGOBIT=y
 CONFIG_I2C_RK3X=y
 CONFIG_INPUT_POLLDEV=y
 CONFIG_KEYBOARD_GPIO_POLLED=y
+# CONFIG_MALI_DEBUG is not set
+CONFIG_MALI_EXPERT=y
+# CONFIG_MALI_GATOR_SUPPORT is not set
+# CONFIG_MALI_GPU_TRACEPOINTS is not set
+CONFIG_MALI_MIDGARD=y
+# CONFIG_MALI_MIDGARD_DEBUG_SYS is not set
+# CONFIG_MALI_MIDGARD_DVFS is not set
+# CONFIG_MALI_MIDGARD_ENABLE_TRACE is not set
+# CONFIG_MALI_MIDGARD_RT_PM is not set
+# CONFIG_MALI_NO_MALI is not set
+CONFIG_MALI_PLATFORM_FAKE=y
+CONFIG_MALI_PLATFORM_THIRDPARTY=y
+CONFIG_MALI_PLATFORM_THIRDPARTY_NAME="rk"
+# CONFIG_MALI_SYSTEM_TRACE is not set
+# CONFIG_MALI_TRACE_TIMELINE is not set
 CONFIG_MEDIA_SUPPORT=y
 # CONFIG_MFD_AS3722 is not set
 # CONFIG_MFD_CROS_EC_I2C is not set
