--- a/chromeos/config/i386/common.config
+++ b/chromeos/config/i386/common.config
@@ -715,6 +715,7 @@ CONFIG_M686=y
 # CONFIG_MACHZ_WDT is not set
 # CONFIG_MACINTOSH_DRIVERS is not set
 # CONFIG_MAG3110 is not set
+# CONFIG_MALI_MIDGARD is not set
 # CONFIG_MATH_EMULATION is not set
 # CONFIG_MATOM is not set
 # CONFIG_MAX1363 is not set
