--- a/chromeos/config/mips/common.config
+++ b/chromeos/config/mips/common.config
@@ -345,6 +345,7 @@ CONFIG_LZO_DECOMPRESS=m
 # CONFIG_MACH_TX39XX is not set
 # CONFIG_MACH_TX49XX is not set
 # CONFIG_MACH_VR41XX is not set
+# CONFIG_MALI_MIDGARD is not set
 # CONFIG_MEDIA_SUPPORT is not set
 # CONFIG_MEGARAID_LEGACY is not set
 # CONFIG_MEGARAID_NEWGEN is not set
