--- a/chromeos/config/x86_64/common.config
+++ b/chromeos/config/x86_64/common.config
@@ -785,6 +785,7 @@ CONFIG_LZO_DECOMPRESS=y
 # CONFIG_MACHZ_WDT is not set
 # CONFIG_MACINTOSH_DRIVERS is not set
 # CONFIG_MAG3110 is not set
+# CONFIG_MALI_MIDGARD is not set
 # CONFIG_MATOM is not set
 # CONFIG_MAX1363 is not set
 # CONFIG_MAX517 is not set
