CHROMIUM: config: Add CONFIG_REGULATOR_PWM for Rockchip
This is:

 echo 'CONFIG_REGULATOR_PWM=y' >> \
   chromeos/config/armel/chromiumos-rockchip.flavour.config
 echo 'CONFIG_REGULATOR_PWM=y' >> \
   chromeos/config/armel/chromiumos-arm.flavour.config

 ./chromeos/scripts/kernelconfig oldconfig

BUG=chrome-os-partner:30167
TEST=PWM regulator probes

Change-Id: Iaf7dbe1d2ffb7459e56e361c6e3bab4528bae927
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/219621
Reviewed-by: Dmitry Torokhov <dtor@chromium.org>

--- a/chromeos/config/arm64/common.config
+++ b/chromeos/config/arm64/common.config
@@ -552,6 +552,7 @@ CONFIG_REGULATOR_GPIO=y
 CONFIG_REGULATOR_MAX8973=y
 CONFIG_REGULATOR_PALMAS=y
 # CONFIG_REGULATOR_PFUZE100 is not set
+# CONFIG_REGULATOR_PWM is not set
 CONFIG_REGULATOR_TPS51632=y
 CONFIG_REGULATOR_TPS62360=y
 # CONFIG_REGULATOR_TPS65023 is not set
