--- a/chromeos/config/armel/chromiumos-rockchip.flavour.config
+++ b/chromeos/config/armel/chromiumos-rockchip.flavour.config
@@ -103,6 +103,7 @@ CONFIG_PINCTRL_ROCKCHIP=y
 CONFIG_PL330_DMA=y
 # CONFIG_PM_DEVFREQ is not set
 CONFIG_PWM_ROCKCHIP=y
+CONFIG_REGULATOR_PWM=y
 CONFIG_REGULATOR_RK808=y
 # CONFIG_REGULATOR_TPS51632 is not set
 # CONFIG_REGULATOR_TPS62360 is not set
