--- a/chromeos/config/armel/chromiumos-tegra124.flavour.config
+++ b/chromeos/config/armel/chromiumos-tegra124.flavour.config
@@ -84,6 +84,7 @@ CONFIG_PM_DEVFREQ=y
 CONFIG_POWER_RESET_AS3722=y
 CONFIG_PWM_TEGRA=y
 CONFIG_REGULATOR_AS3722=y
+# CONFIG_REGULATOR_PWM is not set
 CONFIG_REGULATOR_TPS51632=y
 CONFIG_REGULATOR_TPS62360=y
 CONFIG_REGULATOR_TPS65090=y
