--- a/chromeos/config/armel/chromiumos-arm.flavour.config
+++ b/chromeos/config/armel/chromiumos-arm.flavour.config
@@ -130,6 +130,7 @@ CONFIG_POWER_RESET_AS3722=y
 CONFIG_PWM_ROCKCHIP=y
 CONFIG_PWM_TEGRA=y
 CONFIG_REGULATOR_AS3722=y
+CONFIG_REGULATOR_PWM=y
 CONFIG_REGULATOR_RK808=y
 CONFIG_REGULATOR_TPS51632=y
 CONFIG_REGULATOR_TPS62360=y
