CHROMIUM: config: Add CONFIG_PM_ADVANCED_DEBUG
It's very handy to have PM Debug features enabled.

BUG=None
TEST=After enabling power domains, can run:
  cat /sys/kernel/debug/pm_genpd/pm_genpd_summary

Change-Id: Ib1db82f40dd0796ab9691b75cd02310366b7f2f8
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/220108
Reviewed-by: Dmitry Torokhov <dtor@chromium.org>

--- a/chromeos/config/base.config
+++ b/chromeos/config/base.config
@@ -1226,7 +1226,7 @@ CONFIG_PM=y
 # CONFIG_PMBUS is not set
 # CONFIG_PMIC_ADP5520 is not set
 # CONFIG_PMIC_DA903X is not set
-# CONFIG_PM_ADVANCED_DEBUG is not set
+CONFIG_PM_ADVANCED_DEBUG=y
 CONFIG_PM_DEBUG=y
 CONFIG_PM_RUNTIME=y
 # CONFIG_POSIX_MQUEUE is not set
