CHROMIUM: config: rockchip: enable mali sysfs
This amounts to:

echo 'CONFIG_MALI_MIDGARD_DEBUG_SYS=y' >> \
	chromeos/config/armel/chromiumos-rockchip.flavour.config

./chromeos/scripts/kernelconfig oldconfig

BUG=chrome-os-partner:31652
TEST=emerge-veyron_pinky chromeos-kernel-3_14
TEST=boot to UI with DRM patch set

Change-Id: If24a996a17995432ac04f5e8900b84f114d9fafe
Signed-off-by: Simon Xue <xxm@rock-chips.com>
Reviewed-on: https://chromium-review.googlesource.com/220140
Reviewed-by: Dominik Behr <dbehr@chromium.org>
Reviewed-by: Daniel Kurtz <djkurtz@chromium.org>
Tested-by: Daniel Kurtz <djkurtz@chromium.org>
Commit-Queue: Daniel Kurtz <djkurtz@chromium.org>

--- a/chromeos/config/armel/chromiumos-rockchip.flavour.config
+++ b/chromeos/config/armel/chromiumos-rockchip.flavour.config
@@ -69,11 +69,12 @@ CONFIG_I2C_RK3X=y
 CONFIG_INPUT_POLLDEV=y
 CONFIG_KEYBOARD_GPIO_POLLED=y
 # CONFIG_MALI_DEBUG is not set
+# CONFIG_MALI_DEBUG_SHADER_SPLIT_FS is not set
 CONFIG_MALI_EXPERT=y
 # CONFIG_MALI_GATOR_SUPPORT is not set
 # CONFIG_MALI_GPU_TRACEPOINTS is not set
 CONFIG_MALI_MIDGARD=y
-# CONFIG_MALI_MIDGARD_DEBUG_SYS is not set
+CONFIG_MALI_MIDGARD_DEBUG_SYS=y
 # CONFIG_MALI_MIDGARD_DVFS is not set
 # CONFIG_MALI_MIDGARD_ENABLE_TRACE is not set
 # CONFIG_MALI_MIDGARD_RT_PM is not set
