CHROMIUM: config: Add CONFIG_POWER_AVS for Rockchip
This is:
 echo CONFIG_POWER_AVS=y >> \
   chromeos/config/armel/chromiumos-rockchip.flavour.config
 echo CONFIG_POWER_AVS=y >> \
   chromeos/config/armel/chromiumos-arm.flavour.config

 ./chromeos/scripts/kernelconfig oldconfig

BUG=chrome-os-partner:30167
TEST=Build and boot; WiFi still works.

Change-Id: Iddf71df490af082a2a5d160e53dc09f72405fb3f
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/220691
Reviewed-by: Sonny Rao <sonnyrao@chromium.org>

--- a/chromeos/config/arm64/common.config
+++ b/chromeos/config/arm64/common.config
@@ -512,6 +512,7 @@ CONFIG_PINMUX=y
 CONFIG_PM_CLK=y
 CONFIG_PM_DEVFREQ=y
 CONFIG_PM_OPP=y
+# CONFIG_POWER_AVS is not set
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_AS3722=y
 # CONFIG_POWER_RESET_GPIO is not set
