--- a/chromeos/config/armel/chromiumos-arm.flavour.config
+++ b/chromeos/config/armel/chromiumos-arm.flavour.config
@@ -126,6 +126,7 @@ CONFIG_PL310_ERRATA_727915=y
 CONFIG_PL310_ERRATA_769419=y
 CONFIG_PL330_DMA=y
 CONFIG_PM_DEVFREQ=y
+CONFIG_POWER_AVS=y
 CONFIG_POWER_RESET_AS3722=y
 CONFIG_PWM_ROCKCHIP=y
 CONFIG_PWM_TEGRA=y
