--- a/chromeos/config/armel/chromiumos-rockchip.flavour.config
+++ b/chromeos/config/armel/chromiumos-rockchip.flavour.config
@@ -102,6 +102,7 @@ CONFIG_PINCTRL_ROCKCHIP=y
 # CONFIG_PL310_ERRATA_769419 is not set
 CONFIG_PL330_DMA=y
 # CONFIG_PM_DEVFREQ is not set
+CONFIG_POWER_AVS=y
 CONFIG_PWM_ROCKCHIP=y
 CONFIG_REGULATOR_PWM=y
 CONFIG_REGULATOR_RK808=y
