--- a/chromeos/config/i386/common.config
+++ b/chromeos/config/i386/common.config
@@ -983,6 +983,7 @@ CONFIG_PM_TRACE_RTC=y
 CONFIG_PNP=y
 CONFIG_PNPACPI=y
 CONFIG_PNP_DEBUG_MESSAGES=y
+# CONFIG_POWER_AVS is not set
 # CONFIG_POWER_RESET is not set
 CONFIG_PPS=m
 # CONFIG_PPS_CLIENT_GPIO is not set
