--- a/chromeos/config/mips/common.config
+++ b/chromeos/config/mips/common.config
@@ -495,6 +495,7 @@ CONFIG_PM_SLEEP_DEBUG=y
 CONFIG_PM_SLEEP_SMP=y
 # CONFIG_PM_TEST_SUSPEND is not set
 # CONFIG_PM_WAKELOCKS is not set
+# CONFIG_POWER_AVS is not set
 # CONFIG_POWER_RESET is not set
 # CONFIG_PPS is not set
 # CONFIG_PRISM54 is not set
