arm64: Compile usbnet as a module
All archs compile usbnet as a module, and this is required by the
initramfs builds.

BUG=chrome-os-partner:32551
TEST=make_netboot.sh --board rush

Change-Id: Ib93051764f17cdf57a613b7bc025b20d89be410a
Signed-off-by: Michael Spang <spang@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/220783
Reviewed-by: Benson Leung <bleung@chromium.org>

--- a/chromeos/config/arm64/common.config
+++ b/chromeos/config/arm64/common.config
@@ -422,7 +422,6 @@ CONFIG_MFD_TPS6586X=y
 # CONFIG_MFD_TPS65912_I2C is not set
 # CONFIG_MFD_TPS65912_SPI is not set
 CONFIG_MIGRATION=y
-CONFIG_MII=y
 CONFIG_MMC=y
 # CONFIG_MMC_ARMMMCI is not set
 CONFIG_MMC_BLOCK=y
@@ -633,6 +632,7 @@ CONFIG_SND_PCM=y
 # CONFIG_SND_SIMPLE_CARD is not set
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
+# CONFIG_SND_SOC_SSM4567 is not set
 # CONFIG_SND_SOC_TEGRA is not set
 CONFIG_SND_TIMER=y
 CONFIG_SOC_BUS=y
@@ -697,9 +697,6 @@ CONFIG_USB_ARCH_HAS_EHCI=y
 CONFIG_USB_EHCI_TEGRA=y
 # CONFIG_USB_GPIO_VBUS is not set
 # CONFIG_USB_GSPCA is not set
-CONFIG_USB_NET_AX88179_178A=y
-CONFIG_USB_NET_AX8817X=y
-CONFIG_USB_NET_SMSC95XX=y
 # CONFIG_USB_OHCI_HCD is not set
 CONFIG_USB_PHY=y
 # CONFIG_USB_PWC is not set
@@ -708,7 +705,6 @@ CONFIG_USB_PHY=y
 # CONFIG_USB_STORAGE_REALTEK is not set
 CONFIG_USB_ULPI=y
 CONFIG_USB_ULPI_VIEWPORT=y
-CONFIG_USB_USBNET=y
 CONFIG_USB_VIDEO_CLASS=m
 # CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV is not set
 # CONFIG_USB_XHCI_HCD is not set
