--- a/chromeos/config/base.config
+++ b/chromeos/config/base.config
@@ -278,7 +278,6 @@ CONFIG_CRYPTO_WORKQUEUE=y
 CONFIG_DEBUG_CREDENTIALS=y
 CONFIG_DEBUG_DEVRES=y
 # CONFIG_DEBUG_DRIVER is not set
-CONFIG_TEST_ASYNC_DRIVER_PROBE=m
 # CONFIG_DEBUG_FORCE_WEAK_PER_CPU is not set
 CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_INFO=y
@@ -926,6 +925,7 @@ CONFIG_MD=y
 # CONFIG_MFD_WM8994 is not set
 # CONFIG_MICREL_KS8995MA is not set
 # CONFIG_MICREL_PHY is not set
+CONFIG_MII=m
 # CONFIG_MINIX_FS is not set
 # CONFIG_MINIX_SUBPARTITION is not set
 CONFIG_MISC_FILESYSTEMS=y
@@ -1667,6 +1667,7 @@ CONFIG_TCP_CONG_LP=m
 # CONFIG_TCP_CONG_YEAH is not set
 CONFIG_TCP_MD5SIG=y
 # CONFIG_TEGRA_124_DVFS is not set
+CONFIG_TEST_ASYNC_DRIVER_PROBE=m
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_TEST_LIST_SORT is not set
 CONFIG_TEST_MODULE=m
@@ -1810,6 +1811,8 @@ CONFIG_USB_HIDDEV=y
 # CONFIG_USB_MICROTEK is not set
 CONFIG_USB_MON=y
 # CONFIG_USB_MUSB_HDRC is not set
+CONFIG_USB_NET_AX88179_178A=m
+CONFIG_USB_NET_AX8817X=m
 CONFIG_USB_NET_CDCETHER=m
 # CONFIG_USB_NET_CDC_EEM is not set
 # CONFIG_USB_NET_CDC_MBIM is not set
@@ -1828,6 +1831,7 @@ CONFIG_USB_NET_NET1080=m
 CONFIG_USB_NET_RNDIS_HOST=m
 CONFIG_USB_NET_RNDIS_WLAN=m
 CONFIG_USB_NET_SMSC75XX=m
+CONFIG_USB_NET_SMSC95XX=m
 # CONFIG_USB_NET_SR9700 is not set
 # CONFIG_USB_NET_SR9800 is not set
 # CONFIG_USB_NET_ZAURUS is not set
@@ -1934,6 +1938,7 @@ CONFIG_USB_SUPPORT=y
 # CONFIG_USB_TEST is not set
 # CONFIG_USB_TMC is not set
 # CONFIG_USB_TRANCEVIBRATOR is not set
+CONFIG_USB_USBNET=m
 # CONFIG_USB_VL600 is not set
 # CONFIG_USB_WDM is not set
 # CONFIG_USB_WPAN_HCD is not set
