--- a/chromeos/config/armel/common.config
+++ b/chromeos/config/armel/common.config
@@ -509,7 +509,6 @@ CONFIG_MFD_TPS6586X=y
 # CONFIG_MFD_TPS65912_I2C is not set
 # CONFIG_MFD_TPS65912_SPI is not set
 # CONFIG_MG_DISK is not set
-CONFIG_MII=m
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK=y
 CONFIG_MMC_BLOCK_BOUNCE=y
@@ -529,6 +528,8 @@ CONFIG_MODULES_USE_ELF_REL=y
 # CONFIG_MOUSE_APPLETOUCH is not set
 # CONFIG_MOUSE_BCM5974 is not set
 CONFIG_MOUSE_ELAN_I2C=y
+CONFIG_MOUSE_ELAN_I2C_I2C=y
+# CONFIG_MOUSE_ELAN_I2C_SMBUS is not set
 # CONFIG_MOUSE_GPIO is not set
 # CONFIG_MOUSE_PS2 is not set
 # CONFIG_MOUSE_SYNAPTICS_I2C is not set
@@ -706,6 +707,7 @@ CONFIG_SND_PCM=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_GENERIC_DMAENGINE_PCM=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
+# CONFIG_SND_SOC_SSM4567 is not set
 CONFIG_SND_TIMER=y
 # CONFIG_SOC_AM33XX is not set
 # CONFIG_SOC_AM43XX is not set
@@ -765,14 +767,10 @@ CONFIG_UNCOMPRESS_INCLUDE="debug/uncompress.h"
 # CONFIG_USBPCWATCHDOG is not set
 # CONFIG_USB_GPIO_VBUS is not set
 # CONFIG_USB_GSPCA is not set
-CONFIG_USB_NET_AX88179_178A=m
-CONFIG_USB_NET_AX8817X=m
-CONFIG_USB_NET_SMSC95XX=m
 # CONFIG_USB_PWC is not set
 # CONFIG_USB_S2255 is not set
 # CONFIG_USB_STKWEBCAM is not set
 # CONFIG_USB_STORAGE_REALTEK is not set
-CONFIG_USB_USBNET=m
 CONFIG_USB_VIDEO_CLASS=m
 # CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV is not set
 # CONFIG_USB_ZR364XX is not set
