--- a/chromeos/config/x86_64/common.config
+++ b/chromeos/config/x86_64/common.config
@@ -839,7 +839,6 @@ CONFIG_MICROCODE_EARLY=y
 CONFIG_MICROCODE_INTEL=y
 CONFIG_MICROCODE_INTEL_EARLY=y
 CONFIG_MICROCODE_OLD_INTERFACE=y
-CONFIG_MII=m
 # CONFIG_MK8 is not set
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK=y
@@ -868,6 +867,8 @@ CONFIG_MMC_TEST=m
 CONFIG_MODULES_USE_ELF_RELA=y
 CONFIG_MOUSE_APPLETOUCH=m
 CONFIG_MOUSE_ELAN_I2C=y
+CONFIG_MOUSE_ELAN_I2C_I2C=y
+# CONFIG_MOUSE_ELAN_I2C_SMBUS is not set
 # CONFIG_MOUSE_GPIO is not set
 CONFIG_MOUSE_PS2=y
 CONFIG_MOUSE_PS2_ALPS=y
@@ -1324,6 +1325,7 @@ CONFIG_SND_PCM=y
 # CONFIG_SND_SIMPLE_CARD is not set
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
+# CONFIG_SND_SOC_SSM4567 is not set
 # CONFIG_SND_SONICVIBES is not set
 CONFIG_SND_TIMER=y
 # CONFIG_SND_TRIDENT is not set
@@ -1396,9 +1398,6 @@ CONFIG_UID16=y
 CONFIG_USB_EHCI_PCI=y
 # CONFIG_USB_GPIO_VBUS is not set
 # CONFIG_USB_GSPCA is not set
-CONFIG_USB_NET_AX88179_178A=m
-CONFIG_USB_NET_AX8817X=m
-CONFIG_USB_NET_SMSC95XX=m
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_OHCI_HCD_PCI=y
 # CONFIG_USB_OHCI_HCD_PLATFORM is not set
@@ -1408,7 +1407,6 @@ CONFIG_USB_OHCI_HCD_PCI=y
 # CONFIG_USB_STKWEBCAM is not set
 CONFIG_USB_STORAGE_REALTEK=y
 CONFIG_USB_UHCI_HCD=y
-CONFIG_USB_USBNET=m
 CONFIG_USB_VIDEO_CLASS=m
 # CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV is not set
 CONFIG_USB_XHCI_HCD=y
