CHROMIUM: config: Enable LPE audio for Broadwell
BUG=chrome-os-partner:29649
TEST=With entire patch series applied, audio playback is working

Change-Id: I83764d1dec73509e8ad244d82e6a4345062b4af8
Signed-off-by: Kevin Strasser <kevin.strasser@intel.com>
Reviewed-on: https://chromium-review.googlesource.com/221879
Reviewed-by: Ben Zhang <benzh@chromium.org>
Tested-by: Ben Zhang <benzh@chromium.org>
Commit-Queue: Ben Zhang <benzh@chromium.org>

--- a/chromeos/config/x86_64/common.config
+++ b/chromeos/config/x86_64/common.config
@@ -388,8 +388,8 @@ CONFIG_DRM_USB=y
 # CONFIG_DRM_VIA is not set
 # CONFIG_DRM_VMWGFX is not set
 # CONFIG_DVB_DUMMY_FE is not set
-# CONFIG_DW_DMAC is not set
-# CONFIG_DW_DMAC_CORE is not set
+CONFIG_DW_DMAC=m
+CONFIG_DW_DMAC_CORE=m
 # CONFIG_DW_DMAC_PCI is not set
 # CONFIG_DW_WATCHDOG is not set
 # CONFIG_DX_SEP is not set
@@ -1322,6 +1322,13 @@ CONFIG_SND_PCM=y
 # CONFIG_SND_SIMPLE_CARD is not set
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
+CONFIG_SND_SOC_INTEL_BROADWELL_MACH=m
+# CONFIG_SND_SOC_INTEL_BYT_RT5640_MACH is not set
+CONFIG_SND_SOC_INTEL_HASWELL=m
+# CONFIG_SND_SOC_INTEL_HASWELL_MACH is not set
+CONFIG_SND_SOC_INTEL_SST=m
+CONFIG_SND_SOC_INTEL_SST_ACPI=m
+CONFIG_SND_SOC_RT286=m
 # CONFIG_SND_SOC_SSM4567 is not set
 # CONFIG_SND_SONICVIBES is not set
 CONFIG_SND_TIMER=y
