CHROMIUM: config: regenerate configs
BUG=chrome-os-partner:32695
TEST=none

Change-Id: I844d1e70884dd5796228bf1408ee719c00292a77
Signed-off-by: Michael Spang <spang@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/221495
Reviewed-by: Benson Leung <bleung@chromium.org>
Reviewed-by: Kees Cook <keescook@chromium.org>

--- a/chromeos/config/arm64/common.config
+++ b/chromeos/config/arm64/common.config
@@ -302,7 +302,6 @@ CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_HARDLOCKUP_DETECTOR_OTHER_CPU=y
 # CONFIG_HAVE_AOUT is not set
 CONFIG_HAVE_ARCH_PFN_VALID=y
-CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_CLK_PREPARE=y
@@ -368,6 +367,7 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_KEYBOARD_MATRIX is not set
 # CONFIG_KEYBOARD_SAMSUNG is not set
 CONFIG_KEYBOARD_TEGRA=y
+CONFIG_KEYS_COMPAT=y
 # CONFIG_KS8842 is not set
 # CONFIG_KS8851 is not set
 # CONFIG_KS8851_MLL is not set
@@ -591,8 +591,6 @@ CONFIG_SATA_PMP=y
 # CONFIG_SCSI_CONSTANTS is not set
 # CONFIG_SCSI_LOWLEVEL_PCMCIA is not set
 # CONFIG_SDIO_UART is not set
-CONFIG_SECCOMP=y
-CONFIG_SECCOMP_FILTER=y
 CONFIG_SELECT_MEMORY_MODEL=y
 # CONFIG_SENSORS_GPIO_FAN is not set
 # CONFIG_SENSORS_HMC5843 is not set
