--- a/chromeos/config/armel/chromiumos-arm.flavour.config
+++ b/chromeos/config/armel/chromiumos-arm.flavour.config
@@ -208,6 +208,8 @@ CONFIG_SSB_SDIOHOST=y
 CONFIG_SSB_SDIOHOST_POSSIBLE=y
 # CONFIG_SSB_SILENT is not set
 CONFIG_SYS_SUPPORTS_HUGETLBFS=y
+CONFIG_TEGRA124_EMC=y
+CONFIG_TEGRA124_MC=y
 # CONFIG_TEGRA124_SOCTHERM is not set
 CONFIG_TEGRA20_APB_DMA=y
 # CONFIG_TEGRA20_MC is not set
