--- a/chromeos/config/armel/chromiumos-tegra124.flavour.config
+++ b/chromeos/config/armel/chromiumos-tegra124.flavour.config
@@ -145,6 +145,8 @@ CONFIG_SPI_TEGRA20_SFLASH=y
 CONFIG_SPI_TEGRA20_SLINK=y
 # CONFIG_SSB is not set
 CONFIG_SYS_SUPPORTS_HUGETLBFS=y
+CONFIG_TEGRA124_EMC=y
+CONFIG_TEGRA124_MC=y
 CONFIG_TEGRA124_SOCTHERM=y
 CONFIG_TEGRA20_APB_DMA=y
 # CONFIG_TEGRA20_MC is not set
