--- a/chromeos/config/arm64/common.config
+++ b/chromeos/config/arm64/common.config
@@ -96,7 +96,8 @@ CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
 # CONFIG_ARC_EMAC is not set
 CONFIG_ARM64=y
 # CONFIG_ARM64_64K_PAGES is not set
-# CONFIG_ARM64_CPU_SUSPEND is not set
+CONFIG_ARM64_CPUIDLE=y
+CONFIG_ARM64_CPU_SUSPEND=y
 # CONFIG_ARM64_CRYPTO is not set
 CONFIG_ARM_AMBA=y
 CONFIG_ARM_ARCH_TIMER=y
@@ -231,6 +232,7 @@ CONFIG_DRM_TEGRA_FBDEV=y
 # CONFIG_DRM_TEGRA_STAGING is not set
 # CONFIG_DRM_UDL is not set
 CONFIG_DTC=y
+CONFIG_DT_IDLE_STATES=y
 # CONFIG_DVB_DUMMY_FE is not set
 # CONFIG_DW_DMAC is not set
 # CONFIG_DW_DMAC_CORE is not set
