--- a/arch/arm/configs/rk1108_defconfig
+++ b/arch/arm/configs/rk1108_defconfig
@@ -52,6 +52,7 @@ CONFIG_HIGHMEM=y
 CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_CMA=y
+CONFIG_CMA_STINGY=y
 CONFIG_ZSMALLOC=y
 CONFIG_SECCOMP=y
 CONFIG_ZBOOT_ROM_TEXT=0x0
