arm64: dts: px5: change machine name.
Change-Id: I58e03554bd15eb03a87ef3a8ca5b0f4d95fcda9c
Signed-off-by: Jason Song <sxj@rock-chips.com>

--- a/arch/arm64/boot/dts/px5.dtsi
+++ b/arch/arm64/boot/dts/px5.dtsi
@@ -9,7 +9,7 @@
 #include <rk3368_dram_default_timing.dtsi>
 
 / {
-	compatible = "rockchip,rk3368";
+	compatible = "rockchip,px5";
 
 	rockchip,sram = <&sram>;
 	interrupt-parent = <&gic>;
