arm64: dts: px5: fix pinctrl warnning.
1.i2s_sdio1、i2s_sdio2、i2s_sdio3 used as gpio
2.l_sensor and p_sensor do not request same gpio.

Change-Id: If31d6f3c7c3d21ef202a7d22b171adf91aa35d30
Signed-off-by: Jason Song <sxj@rock-chips.com>

--- a/arch/arm64/boot/dts/px5-sdk.dts
+++ b/arch/arm64/boot/dts/px5-sdk.dts
@@ -336,9 +336,9 @@
 		compatible = "ls_stk3410";
 		reg = <0x48>;
 		type = <SENSOR_TYPE_LIGHT>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&gpio2_c3>;
-		irq-gpio = <&gpio2 19 IRQ_TYPE_LEVEL_LOW>;
+		//pinctrl-names = "default";
+		//pinctrl-0 = <&gpio2_c3>;
+		//irq-gpio = <&gpio2 19 IRQ_TYPE_LEVEL_LOW>;
 		irq_enable = <0>;
 		als_threshold_high = <100>;
 		als_threshold_low = <10>;
