arm64: dts: px5: set camera used cma to 40MB.
Change-Id: I1ca972fd74545d5fd7735761216ef891a3933ffb
Signed-off-by: Jason Song <sxj@rock-chips.com>

--- a/arch/arm64/boot/dts/px5-sdk.dts
+++ b/arch/arm64/boot/dts/px5-sdk.dts
@@ -810,8 +810,9 @@
 	};
 };
 
+/* the second val is size, set 40MB default */
 &ion_cma {
-	reg = <0x00000000 0x00000000>; /* 0MB */
+	reg = <0x00000000 0x02800000>;
 };
 
 &px5_cif_sensor{
